--- a/package.xml
+++ b/package.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0"?>
-<package>
+<package format="3">
   <name>loam_horizon</name>
   <version>0.0.0</version>
 
@@ -13,29 +12,18 @@
   <license>BSD</license>
 
   <author email="dev@livoxtech.com">livox</author>
-  
-  <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>geometry_msgs</build_depend>
-  <build_depend>nav_msgs</build_depend>
-  <build_depend>roscpp</build_depend>
-  <build_depend>rospy</build_depend>
-  <build_depend>std_msgs</build_depend>  
-  <build_depend>rosbag</build_depend>
-  <build_depend>sensor_msgs</build_depend>
-  <build_depend>tf</build_depend>
-  <build_depend>image_transport</build_depend>
-  <build_depend>livox_ros_driver</build_depend>
-  
-  <run_depend>geometry_msgs</run_depend>
-  <run_depend>nav_msgs</run_depend>
-  <run_depend>sensor_msgs</run_depend>
-  <run_depend>roscpp</run_depend>
-  <run_depend>rospy</run_depend>
-  <run_depend>std_msgs</run_depend>
-  <run_depend>rosbag</run_depend>
-  <run_depend>tf</run_depend>
-  <run_depend>image_transport</run_depend>
-  <run_depend>livox_ros_driver</run_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
+  <depend>roscpp</depend>
+  <depend>rospy</depend>
+  <depend>std_msgs</depend>  
+  <depend>rosbag</depend>
+  <depend>sensor_msgs</depend>
+  <depend>tf</depend>
+  <depend>image_transport</depend>
+  <depend>livox_ros_driver</depend>
 
   <export>
   </export>
